# scrapt

./: .gitignore  Cargo.toml  LICENSE  README.md  minimal-project.sb3
common/src/: extensions.rs  value.rs
editor/vim/ftdetect/: scrapt.vim
editor/vim/syntax/: scrapt.vim
examples/minimal-project/: project.toml  stage.scr
examples/roadmap-project/: cat.scr  project.toml  stage.scr
examples/test-project/: project.toml  stage.scr
examples/untitled-project/: cat.scr  cat.uscr  project.toml  stage.scr  stage.uscr
lang/: Cargo.toml  grammar.ebnf
lang/src/: headers.rs  lexer.rs  lib.rs  main.rs  media_type.rs  span.rs
lang/src/lex/: cursor.rs  error.rs  mod.rs  token.rs
lang/src/parse/: error.rs  mod.rs  util.rs
lang/tests/: lex.rs  minimal.rs
manifest/common/: Cargo.toml
manifest/common/src/: meta.rs
manifest/scrapt/: Cargo.toml
manifest/scrapt/src/: lib.rs
manifest/scrapt/tests/: manifest.toml
manifest/scratch/: Cargo.toml
manifest/scratch/src/: block.rs  common.rs  lib.rs  target.rs
manifest/scratch/tests/: parse.rs
manifest_common/src/: lib.rs  meta.rs
manifest_scrapt/: Cargo.toml
manifest_scrapt/tests/: parse.rs
manifest_scratch/: Cargo.toml
manifest_scratch/src/: block.rs  common.rs  lib.rs  target.rs
manifest_unscratch/: Cargo.toml
manifest_unscratch/src/: lib.rs
manifest_unscratch/tests/: parse.rs
misc/syntax-highlighting/: scrapt.vim
sb3/: Cargo.toml
sb3/src/: block.rs  lib.rs  monitor.rs  target.rs
scratch-sb3/: Cargo.toml
scratch-sb3/src/: block.rs  code_position.rs  extension.rs  id.rs  lib.rs  metadata.rs  monitor.rs  project.rs  string_array.rs  target.rs  value.rs
scratch-sb3/tests/: parse.rs  project.json
scratch/common/: Cargo.toml
scratch/common/src/: lib.rs  media_types.rs
scratch/sb3/: Cargo.toml
scratch/sb3/src/: common.rs  target.rs
scratch/sb3/tests/: parse.rs
src/: cli.rs  lib.rs  main.rs  manifest.rs
src/commands/: mod.rs
src/commands/new/: error.rs  mod.rs
src/manifest/: common.rs  extension.rs  meta.rs  mod.rs  monitor.rs  target.rs  unscratch.rs
src/new/: mod.rs
src/parsing/: error.rs  headers.rs  lexer.rs  mod.rs  span.rs
src/scratch/: mod.rs
src/scratchscript/: lexer.rs
unscript/: Cargo.toml
unscript/tests/: lex.rs
(+12 files in other folders)
