[package]
name = "scrapt"
version = "0.1.0"
authors = ["rabuu <dev@rbuurman.de>"]
edition = "2024"
description = "Script your Scratch!"

[workspace]
members = ["scratch/common", "scratch/sb3", "lang"]

[workspace.dependencies]
scratch-common-types = { path = "scratch/common", features = ["serde"] }
scratch-sb3 = { path = "scratch/sb3" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dependencies]
scrapt-lang = { path = "lang" }
scratch-common-types = { workspace = true }
scratch-sb3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
md-5 = "0.10"
tracing-subscriber = "0.3"
zip = "2"
toml = "0.8"

[patch.crates-io]
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
