[package]
name = "scrapt"
version = "0.1.0"
authors = ["rabuu <dev@rbuurman.de>"]
edition = "2024"
description = "Script your Scratch!"

[workspace]
members = ["scratch/common", "scratch/sb3"]

[workspace.dependencies]
scratch-common-types = { path = "scratch/common", features = ["serde"] }
scratch-sb3 = { path = "scratch/sb3" }
serde = { version = "1", features = ["derive"] }

[dependencies]
scratch-common-types = { workspace = true }
scratch-sb3 = { workspace = true }
serde = { workspace = true }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
md-5 = "0.10"
zip = "2"
toml = "0.8"
