[package]
name = "scrapt"
version = "0.1.0"
authors = ["rabuu <rasmus@rbuurman.de>"]
edition = "2024"
description = "Script your Scratch"

[workspace]
members = ["scratch-sb3"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies]
scratch-sb3 = { path = "scratch-sb3" }
serde = { workspace = true }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
md-5 = "0.10"
zip = "2"
toml = "0.8"
miette = { version = "7.5.0", features = ["fancy"] }
